--- a/package.json
+++ b/package.json
@@ -7,14 +7,25 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "bootstrap": "^4.5.2",
+    "bootstrap-icons-vue": "^0.7.0",
+    "bootstrap-vue": "^2.17.3",
+    "popper.js": "^1.16.1",
+    "portal-vue": "^2.1.7",
+    "sweetalert2": "^11.1.5",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-sweetalert2": "^5.0.2",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "sass": "^1.26.11",
+    "sass-loader": "^10.0.2",
+    "vue-cli-plugin-bootstrap-vue": "~0.8.1",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
